Navigation file name and component name renamed to be more consequent. Small screen size override in the righ side corrected. Overflow-x blocked.

--- a/frontend/src/components/css_files/13_imprint.css
+++ b/frontend/src/components/css_files/13_imprint.css
@@ -29,6 +29,7 @@
     "regnum regnum-content"
     "tax tax-content";
     column-gap: 5px;
+    row-gap: 10px;
     border: 10px solid red;
     font-size: 1rem;
   
