--- a/frontend/src/components/css_files/1_base_style.css
+++ b/frontend/src/components/css_files/1_base_style.css
@@ -25,6 +25,7 @@ body {
     background-color: var(--main-dark-color);
     color: var(--main-light-color);
     font-family: 'Rokkitt', serif;
+    overflow-x: hidden;
 }
 
 /*The below code retains the benefit content always below the menu line:*/
