--- a/frontend/src/components/css_files/2_1_navigation.css
+++ b/frontend/src/components/css_files/2_1_navigation.css
@@ -123,11 +123,12 @@
 
 .language-selector {
    position: fixed;
-   top: 60px;
-   right: 200px;
+   top: 5px;
+   right: 25px;
    z-index: 1;
    background-color: var(--main-dark-color);
    border: 1px solid var(--main-dark-color);
    box-shadow: var(--text-shadow);
    cursor: pointer;
+   grid-area: language;
 }
