--- a/frontend/src/components/css_files/3_1_hero.css
+++ b/frontend/src/components/css_files/3_1_hero.css
@@ -2,6 +2,8 @@
     grid-area: intro-container;
     display: grid;
     justify-content: center;
+    width: 100vw;
+    margin: 0;
     
 }
 
