--- a/frontend/src/components/css_files/3_2_benefit.css
+++ b/frontend/src/components/css_files/3_2_benefit.css
@@ -1,6 +1,6 @@
 .benefits {
     grid-area: benefits;
-    padding: 0 var(--text-padding) var(--text-padding) var(--text-padding);
+    padding: 0 0 var(--text-padding) 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
